--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/profile-square-11.webp" alt="Portrait of Alex" class="img-fluid profile-photo">
+              <img src="assets/img/profile/pass.jpg" alt="Zephaniah Abel" class="img-fluid profile-photo">
             </figure>
           </div>
         </div>
